re PR tree-optimization/55920 (ICE in expand_debug_locations, at cfgexpand.c:3753)

PR tree-optimization/55920
	* tree-sra.c (sra_modify_assign): If for lacc->grp_to_be_debug_replaced
	there is non-useless type conversion needed from debug rhs to lhs,
	use build_debug_ref_for_model and/or VIEW_CONVERT_EXPR.

	* gcc.c-torture/compile/pr55920.c: New test.

From-SVN: r195209